add all functionality

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @import url(./vendor/font.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__navlink/header__navlink.css);
+@import url(./blocks/header/__navlink/_menuopened/header__navlink_menuopened.css);
+@import url(./blocks/header/__burger-button/header__burger-button.css);
+@import url(./blocks/header/__burger-button/_opened/header__burger-button_opened.css);
+@import url(./blocks/header/__nav/header__nav.css);
+@import url(./blocks/header/__nav/_hidden/header__nav_hidden.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__wrapper/header__wrapper.css);
+@import url(./blocks/header/_column-reverse/header_column-reverse.css);
+@import url(./blocks/header/__burger-button/_hidden/header__burger-button_hidden.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/profile/__avatar-wrapper/profile__avatar-wrapper.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
@@ -24,6 +34,14 @@
 @import url(./blocks/elements/__delete-button/_hidden/elements__delete-button_hidden.css);
 @import url(./blocks/elements/__title/elements__title.css);
 @import url(./blocks/elements/elements.css);
+@import url(./blocks/sign/__title/sign__title.css);
+@import url(./blocks/sign/__form/sign__form.css);
+@import url(./blocks/sign/__input/sign__input.css);
+@import url(./blocks/sign/__input/_type_password/sign__input_type_password.css);
+@import url(./blocks/sign/__submit/sign__submit.css);
+@import url(./blocks/sign/__subtitle/sign__subtitle.css);
+@import url(./blocks/sign/__login-link/sign__login-link.css);
+@import url(./blocks/sign/sign.css);
 @import url(./blocks/footer/__copywright/footer__copywright.css);
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/popup/__container/popup__container.css);
@@ -35,9 +53,12 @@
 @import url(./blocks/popup/__button/popup__button.css);
 @import url(./blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(./blocks/popup/__close-button/popup__close-button.css);
+@import url(./blocks/popup/__close-button/_modal/popup__close-button_modal.css);
 @import url(./blocks/popup/__container/_image/popup__container_image.css);
 @import url(./blocks/popup/__image/popup__image.css);
 @import url(./blocks/popup/__image-caption/popup__image-caption.css);
+@import url(./blocks/popup/__modal-container/popup__modal-container.css);
+@import url(./blocks/popup/__modal-title/popup__modal-title.css);
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
 @import url(./blocks/popup/__form-label/popup__form-label.css);
