--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,6 +2,7 @@
     max-width: 880px;
     margin: auto;
     display: flex;
-    align-items: flex-start;
+    justify-content: space-between;
+    align-items: center;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
